# mcp-server-client

./: README.md
mcp-client/: .env-example  README.md  main.py  pyproject.toml  settings.py
mcp-client/app/: factory.py
mcp-client/helpers/: __init__.py  serialization.py  tools.py
mcp-client/routes/: __init__.py  chat.py  tools.py
mcp-client/schemas/: __init__.py  requests.py
mcp-server/: .env-example  README.md  main.py  pyproject.toml  settings.py
mcp-server/app/: __init__.py  factory.py
mcp-server/helpers/: __init__.py  data.py  visuals.py
mcp-server/routes/: __init__.py  render.py
mcp-server/tools/: __init__.py  data.py  visuals.py
